--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>PetClinic-Backend</module>
         <module>dar</module>
         <module>dar-k8s</module>
+        <module>dar-openshift</module>
     </modules>
 
     <pluginRepositories>
