upgrade to 1.3.7 for maven docker plugin

--- a/PetClinic-Backend/pom.xml
+++ b/PetClinic-Backend/pom.xml
@@ -43,6 +43,7 @@
                         <configuration>
                             <repository>bmoussaud/petclinic-backend</repository>
                             <tag>${petclinic-backend.image.version}</tag>
+                            <useMavenSettingsForAuth>true</useMavenSettingsForAuth>
                         </configuration>
                     </execution>
                 </executions>
