--- a/PetClinic/pom.xml
+++ b/PetClinic/pom.xml
@@ -32,6 +32,7 @@
                         </goals>
                         <configuration>
                             <repository>bmoussaud/petclinic</repository>
+                            <useMavenSettingsForAuth>true</useMavenSettingsForAuth>
                             <tag>${petclinic.image.version}</tag>
                             <buildArgs>
                                 <PET_VERSION>${petclinic.image.version}</PET_VERSION>
